--- a/package.json
+++ b/package.json
@@ -5,27 +5,28 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server -d"
   },
   "author": "Gary Li",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "css-loader": "^0.26.1",
-    "file-loader": "^0.10.0",
-    "node-sass": "^4.4.0",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^1.0.0",
+    "file-loader": "^1.1.11",
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "babel-preset-react": "^6.24.1",
     "jquery": "^3.1.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   }
 }
